Finally fixed the horizontal scroll

--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,10 @@
   font-family:'Roboto';
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-color: var(--main-bg-color);
   display: flex;
@@ -19,7 +23,8 @@ body {
   flex-direction: column;
   align-items: center;
   margin: 0;
-  overflow-x: hidden !important;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .pageContainer-small {
